feat: Add menu and pause a game feature
- create basic menu with settings and exit button
- create menu button to pause a game